syntax="proto3";//指定了正在使用proto3语法，如果没指定编译器默认使用proto2语法
package TestGoogleProtoBuff;//等于C#中命名空间
 
// 定义消息类型
message MessageTypeA {
    string contentA = 1;
}

message MessageTypeB {
    int32 numberB = 1;
}

message MainMessage {
    MessageId type = 1;  // 用于标识消息类型
    oneof data {
        MessageTypeA messageA = 2;
        MessageTypeB messageB = 3;
    }
}

enum MessageId{
	MessageTypeA_ID=0;
	MessageTypeB_ID=1;
}